--- a/templates/layout-admin.html.twig
+++ b/templates/layout-admin.html.twig
@@ -32,7 +32,7 @@
                     <!--Brand logo & name-->
                     <div class="navbar-header">
                         <a href="#" class="navbar-brand">
-                            <img src="{{ asset('images/logo.png') }}" class="brand-icon">
+                            <img class="brand-icon" src="{{ asset('images/logo2.png') }}">
                             <div class="brand-title">
                                 <span class="brand-text">Tudo Imóveis</span>
                             </div>
@@ -198,12 +198,6 @@
                                                 <span class="menu-title">Bairros</span>
                                             </a>
                                         </li>
-                                        {# <li>
-                                            <a href="{{ path('destaque_index') }}">
-                                                <i class="ti-star"></i>
-                                                <span class="menu-title">Destaques</span>
-                                            </a>
-                                        </li> #}
                                         <li>
                                             <a href="{{ path('user_index') }}">
                                                 <i class="ti-unlock"></i>
